<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:paddingTop="6dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/red_dark"
        android:textSize="20dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layoutDirection="ltr"
        android:layout_height="50dp">

            <TextView
                android:id="@+id/tv_minute"
                android:textSize="12dp"
                android:textColor="@color/red_dark"
                android:gravity="center"
                android:background="@drawable/gray"
                android:text="@string/minute"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_hour"
                android:textSize="12dp"
                android:textColorHint="@color/gray"
                android:text="@string/hour"
                android:textColor="@color/red_dark"
                android:background="@drawable/gray"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_d1"
                android:textSize="12dp"
                android:textColor="@color/red_dark"
                android:background="@drawable/gray"
                android:text="@string/month"
                android:gravity="center"
                android:textColorHint="@color/gray"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_d2"
                android:textSize="12dp"
                android:background="@drawable/gray"
                android:textColorHint="@color/gray"
                android:text="@string/day"
                android:textColor="@color/red_dark"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_year"
                android:textColor="@color/red_dark"
                android:background="@drawable/white"
                android:textColorHint="@color/gray"
                android:textSize="12dp"
                android:text="@string/year"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"/>


    </LinearLayout>


    <TextView android:id="@+id/tv_explation"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="4dp"
        android:layout_height="288dp">



        <GridView
            android:id="@+id/gv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:layoutDirection="rtl"
            android:horizontalSpacing="1dp"
            android:numColumns="5"
            android:verticalSpacing="1dp"
            android:layout_margin="8dp"
            android:fadeScrollbars="false"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical">

        </GridView>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/cl_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layoutDirection="ltr"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:padding="14dp"
            android:textSize="22dp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:background="@null"
            android:layout_height="match_parent"  />



        <TextView
            android:id="@+id/btn_back"
            android:textColor="@color/blue"
            android:background="@null"
            android:padding="14dp"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:gravity="center|end"
            android:textSize="24dp"
            android:textColor="#aaaaaa"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

    </LinearLayout>
</LinearLayout>